plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'chat'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // smtp
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // json
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.2'

    //h2
    runtimeOnly 'com.h2database:h2'

    //jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    //lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    //AOP
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // ConfigurationProperties 사용을 위한 프로세서
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

    //test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs << '-parameters' // spring boot 3.2부터 추가 필수
}